--- a/_posts/2021-01-26-dataviz-makeove-1/dataviz-makeove-1.html
+++ b/_posts/2021-01-26-dataviz-makeove-1/dataviz-makeove-1.html
@@ -1477,7 +1477,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 <p>For my first DataViz makeover, I have used data from the <a href="https://stats.mom.gov.sg/Pages/Labour-Force-In-Singapore-2019.aspx">Ministry of Manpower of Singapore</a>, which analyses Singapore’s labour force to understand shifts in the labour market to facilitate better decision making.</p>
 <h2 id="the-original-visualisation">1) The original visualisation</h2>
 <p><img src="images/fig1.png" alt=":scale 60%" /> <em>Figure 1: Chart 6 of Labour Force in Singapore 2019 report (page 22)</em></p>
-<p>Before making over the selected visualisation, it is important to have a clear understanding of the context of the visualisation and its key takeaway which is depend on:<br />
+<p>Before making over the selected visualisation, it is important to have a clear understanding of the context of the visualisation and its key takeaways which are dependent on:<br />
 - <strong>Who</strong>: <a href="https://stats.mom.gov.sg/Pages/Labour-Force-In-Singapore-2019.aspx">Individuals, businesses and primarily policy-makers, to help improve the well-being and optimisation of workers.</a><br />
 - <strong>What</strong>: Understanding the shift in Singapore’s labour force from the respective age bands over the past 10 years (2009 to 2019).<br />
 - <strong>How</strong>: Showing that labour force distribution and participation rate of older workers (55 and over) has increased, which resulted in the increase in labour force’s median age.</p>
@@ -1500,7 +1500,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 <tbody>
 <tr class="odd">
 <td>1</td>
-<td><strong>Chart title is not precise</strong> – The title <em>“Resident labour force by age”</em> does not prepare the reader for the main takeaway which is “the increase in median age of labour force” the chart refers to the distribution of the resident labour force by age and is accompanied by a rather convoluted commentary on labour force participation rate (LFPR) of the different age bands and share of resident’s labour force, making it difficult to grasp the main message quickly.</td>
+<td><strong>Chart title is not precise</strong> – The title <em>“Resident labour force by age”</em> does not drive the message of “the increase in median age of labour force”. The chart refers to the share of labour force and is accompanied by a rather convoluted commentary on labour force participation rate (LFPR) of the different age bands and share of resident’s labour force, making it difficult to grasp the main message quickly.</td>
 <td><strong>Change title</strong> to “The shift in Singapore’s labour force distribution and participation rate by age from 2009 to 2019”.</td>
 </tr>
 <tr class="even">
@@ -1510,8 +1510,8 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 </tr>
 <tr class="odd">
 <td>3</td>
-<td><strong>Axis title not properly labelled</strong> – ‘Per Cent’ was labelled below the chart title, but not on the y axis. Age band not labelled on x-axis. Not labelling leaves room for misinterpretation and/or requires reader’s extra time to peruse the chart, all of which draws attention away from the main message.</td>
-<td>It would be clearer and more quickly understood to the reader if both the <strong>y-axis</strong> and <strong>figures</strong> were <strong>appropriately labelled</strong>.</td>
+<td><strong>Axis title not properly labeled</strong> – ‘Share of labour force’ was not labeled on the y axis. This leaves room for misinterpretation and/or requires reader’s extra time to peruse the chart, all of which draws attention away from the main message.</td>
+<td>It would be clearer and more quickly understood to the reader if both the <strong>y-axis</strong> was <strong>appropriately labeled</strong>.</td>
 </tr>
 </tbody>
 </table>
@@ -1559,7 +1559,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 </tr>
 <tr class="even">
 <td>9</td>
-<td><strong>The heavy shading of the table competes for attention.</strong> The table is meant to support the main message hence shading should be kept minimal.Furthermore, the monotone shading does not add value (unlike a heat map which showcases the increase/decrease trends in values).</td>
+<td><strong>The heavy shading of the table competes for attention.</strong> The table is meant to support the main message hence shading should be kept minimal. Furthermore, the monotone shading does not add value (unlike a heat map which showcases the increase/decrease trends in values).</td>
 <td><strong>Remove shading</strong>. Colour should always be intentional - use shading only to highlight key figures.</td>
 </tr>
 <tr class="odd">
